--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
+    "axios": "^1.6.7",
     "bull": "^4.12.2",
+    "cheerio": "^1.0.0-rc.12",
     "nanoid": "^5.0.6",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
